--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+.penAttr {
+  background-color: aquamarine;
+  width: 120px;
+ }
+ 
+ .pendelete{
+  background-color: blue;
+  
+ }
