--- a/views/index.pug
+++ b/views/index.pug
@@ -1,20 +1,30 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to Lalith Vuppala's hosted website ...!
-  button(type="button", class="btn btn-outline-warning", onclick="doReduce()") PressMe
+  //- h1= title
+  //- p Welcome to Lalith Vuppala's hosted website ...!
+  //- button(type="button", class="btn btn-outline-warning", onclick="doReduce()") PressMe
 
-  div(id = "reduce") Reduce the value
-  a(href="Pen") Link
-  script.
-      count = 20
-      change  = -1
-      function doReduce(){
-          count = count + change;
-          change = change  - 1;
-          document.getElementById('reduce').innerHTML = 'Count '+ count +' Change ' + change;
-      }
+  //- div(id = "reduce") Reduce the value
+  //- a(href="Pen") Link
+  
+if (!user)
+a(href="/login") Login
+br
+a(href="/register") Register
+if (user)
+p You are currently logged in as #{user.username}
+a(href="/Pen") Take me to Pen
+br
+a(href="/logout") Logout
+  //- script.
+  //-     count = 20
+  //-     change  = -1
+  //-     function doReduce(){
+  //-         count = count + change;
+  //-         change = change  - 1;
+  //-         document.getElementById('reduce').innerHTML = 'Count '+ count +' Change ' + change;
+  //-     }
       
       
       
