--- a/views/login.pug
+++ b/views/login.pug
@@ -1,25 +1,14 @@
 extends layout
 block content
-.container
-h1= title
-h2= message
-br
-form(role='form', action="/login", method="post", style='max-width: 300px;')
-.form-group
-input.form-control(type='text', name="username", placeholder='Enter Username')
-.form-group
-input.form-control(type='password', name="password", placeholder='Password')
-button.btn.btn-default(type='submit') Submit
-a(href='/')
-button.btn.btn-primary(type="button") Cancel
-extends layout
-block content
-if (!user)
-a(href="/login") Login
-br
-a(href="/register") Register
-if (user)
-p You are currently logged in as #{user.username}
-a(href="/costumes") Take me to costumes
-br
-a(href="/logout") Logout
+    .container
+        h1= title
+        h2= message
+        br
+        form(role='form', action="/login", method="post", style='max-width: 300px;')
+            .form-group
+                input.form-control(type='text', name="username", placeholder='Enter Username')
+            .form-group
+                input.form-control(type='password', name="password", placeholder='Password')
+            button.btn.btn-primary(type='submit') Submit
+            a(href='/')
+                button.btn.btn-secondary(type="button") Cancel
